--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <header>
 	<nav>
 		<div class="logo">
-			David-Photo<span>pi</span>X
+			Brot<span>he</span>rs!
 		</div>
 		<div class="menu">
 			<a href="#">Home</a>
@@ -40,14 +40,14 @@
 	<div class="portfolio-menu">
 			<ul>
 				<li class="active" data-filter="*"> All</li>
-				<li data-filter=".web">Babu</li>
-				<li data-filter=".seo">Baby</li>
+				<li data-filter=".web">David</li>
+				<li data-filter=".seo">My Bro</li>
 				<li data-filter=".graphics">Both</li>
 			</ul>
 		</div>
 		<div class="portfolio-item">
-			<div class="item seo"  data-aos="flip-left" data-aos-offset="100" data-aos-delay="100">
-				<img src="img/p1.jpg" width="100" height="100">
+			<div class="item web"  data-aos="flip-left" data-aos-offset="100" data-aos-delay="100">
+				<img  src="img/p1.jpg" width="100" height="100">
 			</div>
 
 			<div class="item seo"  data-aos="flip-left" data-aos-offset="100" data-aos-delay="200">
@@ -56,45 +56,42 @@
 			<div class="item graphics"  data-aos="flip-left" data-aos-offset="100" data-aos-delay="300">
 				<img src="img/p3.jpg" width="100" height="100">
 			</div>
-			<div class="item seo" data-aos="zoom-in" data-aos-offset="100" data-aos-delay="100">
+			<div class="item web" data-aos="zoom-in" data-aos-offset="100" data-aos-delay="100">
 				<img src="img/p4.jpg" width="100" height="100">
 			</div>
 
-			<div class="item graphics" data-aos="zoom-in" data-aos-offset="100" data-aos-delay="200">
+			<div class="item seo" data-aos="zoom-in" data-aos-offset="100" data-aos-delay="200">
 				<img src="img/p5.jpg" width="100" height="100">
 			</div>
-			<div class="item seo" data-aos="zoom-in" data-aos-offset="100" data-aos-delay="300">
-				<img src="img/p6.jpg" width="100" height="100">
+			<div class="item graphics" data-aos="zoom-in" data-aos-offset="100" data-aos-delay="300">
+				<img  src="img/p6.jpg" width="100" height="100">
 			</div>
-			<div class="item seo" data-aos="zoom-in-up" data-aos-offset="100" data-aos-delay="100">
+			<div class="item web" data-aos="zoom-in-up" data-aos-offset="100" data-aos-delay="100">
 				<img src="img/p7.jpg" width="100" height="100">
 			</div>
-			<div class="item web" data-aos="zoom-in-up" data-aos-offset="100" data-aos-delay="200">
+			<div class="item graphics" data-aos="zoom-in-up" data-aos-offset="100" data-aos-delay="200">
 				<img src="img/p8.jpg" width="100" height="100">
 			</div>
-			<div class="item web" data-aos="zoom-in-up" data-aos-offset="100" data-aos-delay="300">
+			<div class="item graphics" data-aos="zoom-in-up" data-aos-offset="100" data-aos-delay="300">
 				<img src="img/p9.jpg" width="100" height="100">
 			</div>
-			<div class="item web" data-aos="zoom-in-up" data-aos-offset="100" data-aos-delay="300">
+			<div class="item seo" data-aos="zoom-in-up" data-aos-offset="100" data-aos-delay="300">
 				<img src="img/p10.jpg" width="100" height="100">
 			</div>
-			<div class="item web" data-aos="zoom-in-up" data-aos-offset="100" data-aos-delay="300">
+			<div class="item seo" data-aos="zoom-in-up" data-aos-offset="100" data-aos-delay="300">
 				<img src="img/p11.jpg" width="100" height="100">
 			</div>
-			<div class="item web" data-aos="zoom-in-up" data-aos-offset="100" data-aos-delay="300">
+			<div class="item graphics" data-aos="zoom-in-up" data-aos-offset="100" data-aos-delay="300">
 				<img src="img/p12.jpg" width="100" height="100">
 			</div>
-			<div class="item web" data-aos="zoom-in-up" data-aos-offset="100" data-aos-delay="300">
+			<div class="item graphics" data-aos="zoom-in-up" data-aos-offset="100" data-aos-delay="300">
 				<img src="img/p13.jpg" width="100" height="100">
 			</div>
-			<div class="item graphics" data-aos="zoom-in-up" data-aos-offset="100" data-aos-delay="300">
+			<div class="item web" data-aos="zoom-in-up" data-aos-offset="100" data-aos-delay="300">
 				<img src="img/p14.jpg" width="100" height="100">
 			</div>
 			<div class="item seo" data-aos="zoom-in-up" data-aos-offset="100" data-aos-delay="300">
 				<img src="img/p15.jpg" width="100" height="100">
-			</div>
-			<div class="item seo" data-aos="zoom-in-up" data-aos-offset="100" data-aos-delay="300">
-				<img src="img/p16.jpg" width="100" height="100">
 			</div>
 		</div>
 	
@@ -107,7 +104,7 @@
 
 <section class="members">
 		<div class="member-info"  data-aos="zoom-in-up" data-aos-offset="100" data-aos-delay="100">
-			<h1>Our <span>Informations</span></h1>
+			<h1>MY <span>Informations</span></h1>
 	<p>Hi ! i Am</p>
 </div>
 
@@ -117,7 +114,7 @@
 
 	<img class="david" src="img/member.png">
 	<p>
-		Ham etne hasin to nhi ki ham par har koe fida ho jaye Mgr ha jise ham aakh bhr ke dekh le unhe ham uljhan me daal dete hai 
+		No, Matter How Many Times I Fall ,I Will Still Rise😎😜.
 	</p>
 	<h2>* David Rana</h2>
 
@@ -146,13 +143,13 @@
 <footer>
 	<div class="newsletter">
 		<div data-aos="fade-up" data-aos-offset="200">
-			<h2>Subscribe our newsletter</h2>
-			<p>We’re a team of non-cynics who truly care for our work.</p>
+			<h2>Contact</h2>
+			<p>We are both brouther, contact us on this num - 1234567890</p>
 		</div>
 		<div class="n-text" data-aos="fade-up-right" data-aos-offset="200">
 			<label>
 				<input type="text" name="" placeholder="Enter your email">
-				<button>Subscribe</button>
+				<button>Send</button>
 
 			</label>
 		</div>
@@ -161,8 +158,8 @@
 
 	<div class="f-contact" data-aos="zoom-in-up" data-aos-offset="200">
 		<div>
-			<h1>Information</h1>
-			<p>Lorem ipsum dolor sit amet, consectetur elit. Nihil sit dicta.</p>
+			<h1>Address</h1>
+			<p>Uttarakhand  Udham Singh Nager, Khatime, pin-262308</p>
 			
 			<i class="fa fa-whatsapp"></i>
 			<i class="fa fa-instagram"></i>
